--- a/src/index.pug
+++ b/src/index.pug
@@ -12,5 +12,6 @@ html
 		.coverings
 			.coverings-canvas
 				canvas
-				canvas
+			.coverings-actions
+				#add_wall_mode_button.coverings-actions-switch Add wall
 		script(type="text/javascript", src="index.js")
