--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+// use variables
+
 body {
 
   margin: 0;
@@ -63,17 +65,29 @@ canvas {
     transform-origin: 50%;
     transition: background-color 0.25s, border 0.25s;
     // box-sizing: border-box;
-    z-index: 2;
+    z-index: 1;
     // -webkit-font-smoothing: antialiased;
     // -moz-osx-font-smoothing: grayscale;
     // box-shadow: black 0 0 1px 1px;
     border: 15px solid rgba(0, 0, 0, 0);
     border-radius: 15px;
     box-sizing: border-box;
+    text-align: center;
+    color: r413c3c;
 
     &:hover {
 
       border: 15px solid rgba(0, 0, 0, 0.25);
+    }
+
+    &-inner {
+
+      display: inline-block;
+    }
+
+    &.-selected {
+
+      background-color: rgba(0, 255, 0, 0.10);;
     }
 
     // &.-mousedown {
@@ -102,7 +116,7 @@ canvas {
     transform: scale(0.5);
     transition: transform 0.25s;
     box-sizing: border-box;
-    z-index: 3;
+    z-index: 2;
     box-shadow: grey 0 0 1px 1px;
 
     &:hover {
@@ -113,6 +127,39 @@ canvas {
     &.-mousedown {
 
       transform: scale(0.75);
+    }
+  }
+
+  &-actions {
+
+    position: absolute;
+    padding: 10px;
+
+    z-index: 999999;
+
+    // a {}
+
+    &-switch {
+
+      display: inline-block;
+      padding: 10px;
+
+      background-color: darkslategray;
+      color: white;
+      font-family: monospace;
+      cursor: pointer;
+      opacity: 1;
+      transition: opacity 0.25s, background-color 0.25s;
+
+      &:hover {
+
+        opacity: 0.75;
+      }
+
+      &.-pressed {
+
+        background-color: brown;
+      }
     }
   }
 
