--- a/src/index.scss
+++ b/src/index.scss
@@ -20,6 +20,11 @@ canvas {
   z-index: 0;
 }
 
+#textures {
+
+  display: none;
+}
+
 .coverings {
 
   position: absolute;
@@ -32,7 +37,22 @@ canvas {
 
 
 
-  &-canvas {
+  // &-canvas {
+
+  //   position: absolute;
+
+  //   width: 100%;
+  //   height: 100%;
+
+  //   left: 0;
+  //   top: 0;
+
+  //   // z-index: 0;
+  // }
+
+
+
+  &-plan {
 
     position: absolute;
 
@@ -42,100 +62,110 @@ canvas {
     left: 0;
     top: 0;
 
-    // z-index: 0;
+    z-index: 10;
+
+
+
+    &.-hidden {
+
+      display: none;
+    }
+
+
+
+    &-rect {
+
+      position: absolute;
+
+      width: 30px;
+      height: 30px;
+
+      left: 15px;
+      top: 15px;
+
+      background-color: rgba(0, 0, 0, 0.10);
+      cursor: move;
+      // border-radius: 100%;
+      // border: 10px solid black;
+      // // filter: blur(0.5px);
+      // transform: scale(0.5);
+      transform-origin: 50%;
+      transition: background-color 0.25s, border 0.25s;
+      // box-sizing: border-box;
+      z-index: 11;
+      // -webkit-font-smoothing: antialiased;
+      // -moz-osx-font-smoothing: grayscale;
+      // box-shadow: black 0 0 1px 1px;
+      border: 15px solid rgba(0, 0, 0, 0);
+      border-radius: 15px;
+      box-sizing: border-box;
+      text-align: center;
+      color: r413c3c;
+
+      &:hover {
+
+        border: 15px solid rgba(0, 0, 0, 0.25);
+      }
+
+      &-inner {
+
+        display: inline-block;
+      }
+
+      &.-selected {
+
+        background-color: rgba(0, 255, 0, 0.10);;
+      }
+
+      // &.-mousedown {
+
+      //   transform: scale(0.75);
+      // }
+    }
+
+
+
+    &-circle {
+
+      position: absolute;
+
+      width: 60px;
+      height: 60px;
+
+      left: 0;
+      top: 0;
+
+      background-color: rgba(0, 0, 0, 0.25);
+      cursor: move;
+      border-radius: 100%;
+      border: 10px solid grey;
+      // filter: blur(0.5px);
+      transform: scale(0.5);
+      transition: transform 0.25s;
+      box-sizing: border-box;
+      z-index: 12;
+      box-shadow: grey 0 0 1px 1px;
+
+      &:hover {
+
+        transform: scale(0.625);
+      }
+
+      &.-mousedown {
+
+        transform: scale(0.75);
+      }
+    }
   }
 
 
-  &-rect {
-
-    position: absolute;
-
-    width: 30px;
-    height: 30px;
-
-    left: 15px;
-    top: 15px;
-
-    background-color: rgba(0, 0, 0, 0.10);
-    cursor: move;
-    // border-radius: 100%;
-    // border: 10px solid black;
-    // // filter: blur(0.5px);
-    // transform: scale(0.5);
-    transform-origin: 50%;
-    transition: background-color 0.25s, border 0.25s;
-    // box-sizing: border-box;
-    z-index: 1;
-    // -webkit-font-smoothing: antialiased;
-    // -moz-osx-font-smoothing: grayscale;
-    // box-shadow: black 0 0 1px 1px;
-    border: 15px solid rgba(0, 0, 0, 0);
-    border-radius: 15px;
-    box-sizing: border-box;
-    text-align: center;
-    color: r413c3c;
-
-    &:hover {
-
-      border: 15px solid rgba(0, 0, 0, 0.25);
-    }
-
-    &-inner {
-
-      display: inline-block;
-    }
-
-    &.-selected {
-
-      background-color: rgba(0, 255, 0, 0.10);;
-    }
-
-    // &.-mousedown {
-
-    //   transform: scale(0.75);
-    // }
-  }
-
-
-
-  &-circle {
-
-    position: absolute;
-
-    width: 60px;
-    height: 60px;
-
-    left: 0;
-    top: 0;
-
-    background-color: rgba(0, 0, 0, 0.25);
-    cursor: move;
-    border-radius: 100%;
-    border: 10px solid grey;
-    // filter: blur(0.5px);
-    transform: scale(0.5);
-    transition: transform 0.25s;
-    box-sizing: border-box;
-    z-index: 2;
-    box-shadow: grey 0 0 1px 1px;
-
-    &:hover {
-
-      transform: scale(0.625);
-    }
-
-    &.-mousedown {
-
-      transform: scale(0.75);
-    }
-  }
 
   &-actions {
 
     position: absolute;
     padding: 10px;
 
-    z-index: 999999;
+    z-index: 2000;
 
     // a {}
 
@@ -143,6 +173,7 @@ canvas {
 
       display: inline-block;
       padding: 10px;
+      margin: 0 0 0 10px;
 
       background-color: darkslategray;
       color: white;
@@ -160,7 +191,11 @@ canvas {
 
         background-color: brown;
       }
+
+      &:nth-of-type(1) {
+
+        margin: 0 0 0 0;
+      }
     }
   }
-
 }
