--- a/src/index.pug
+++ b/src/index.pug
@@ -9,8 +9,8 @@ html
 
 		#textures
 
-			img#tile1(src="textures/tile1.jpg")
-			img#tile2(src="textures/tile2.jpg")
+			img#tile_texture1(src="textures/tile_texture1.jpg")
+			img#tile_texture2(src="textures/tile_texture2.jpg")
 
 		.coverings
 
