--- a/src/index.pug
+++ b/src/index.pug
@@ -9,8 +9,14 @@ html
 
 		#hidden
 
-			img#tile_texture1(src="textures/tile_texture1.jpg")
-			img#tile_texture2(src="textures/tile_texture2.jpg")
+			//- img#tile_texture1(src="textures/tile_texture1.jpg")
+			//- img#tile_texture2(src="textures/tile_texture2.jpg")
+
+			//- img#tile_texture3(src="textures/test1/Plitka1_Base_Color.png")
+			//- img#tile_texture4(src="textures/test1/Plitka1_Mixed_AO.png")
+			//- img#tile_texture5(src="textures/test1/Plitka1_Normal_OpenGL.png")
+			//- img#tile_texture6(src="textures/test1/Plitka1_Roughness.png")
+
 			input(type="file" accept="model/gltf-binary")
 
 		.coverings
@@ -24,3 +30,5 @@ html
 				#upload_model_button.coverings-actions-switch Upload model
 				#add_wall_mode_button.coverings-actions-switch Add wall
 				#mode_toggle_BUTTON.coverings-actions-switch Plan mode
+
+			.coverings-materials
