--- a/src/index.scss
+++ b/src/index.scss
@@ -110,6 +110,8 @@ canvas {
       &-inner {
 
         display: inline-block;
+        font-family: monospace;
+        line-height: 18px;
       }
 
       &.-selected {
@@ -134,6 +136,9 @@ canvas {
 
       left: 0;
       top: 0;
+
+      margin-left: -30px;
+      margin-top: -30px;
 
       background-color: rgba(0, 0, 0, 0.25);
       cursor: move;
@@ -160,7 +165,7 @@ canvas {
 
 
 
-  &-actions {
+  &-actions, &-materials {
 
     position: absolute;
     padding: 10px;
@@ -197,5 +202,10 @@ canvas {
         margin: 0 0 0 0;
       }
     }
+  }
+
+  &-materials {
+
+    bottom: 0;
   }
 }
