--- a/src/index.pug
+++ b/src/index.pug
@@ -9,13 +9,7 @@ html
 
 		#hidden
 
-			//- img#tile_texture1(src="textures/tile_texture1.jpg")
-			//- img#tile_texture2(src="textures/tile_texture2.jpg")
-
-			//- img#tile_texture3(src="textures/test1/Plitka1_Base_Color.png")
-			//- img#tile_texture4(src="textures/test1/Plitka1_Mixed_AO.png")
-			//- img#tile_texture5(src="textures/test1/Plitka1_Normal_OpenGL.png")
-			//- img#tile_texture6(src="textures/test1/Plitka1_Roughness.png")
+			img#transparent(src="textures/transparent.png")
 
 			input(type="file" accept="model/gltf-binary")
 
@@ -32,3 +26,14 @@ html
 				#mode_toggle_BUTTON.coverings-actions-switch Plan mode
 
 			.coverings-materials
+
+		.modal
+
+			.modal-inner
+
+				.coverings-actions.-modal
+
+					input.coverings-actions-input(value="2.5 m")
+					input.coverings-actions-input(value="4 m")
+					input.coverings-actions-input(value="2.5 m")
+					#apply_sizes_BUTTON.coverings-actions-form_submit Apply
