--- a/src/index.scss
+++ b/src/index.scss
@@ -174,11 +174,11 @@ canvas {
 
     // a {}
 
-    &-switch {
+    &-switch, &-form_submit, &-input {
 
       display: inline-block;
       padding: 10px;
-      margin: 0 0 0 10px;
+      margin: 0 10px 0 0;
 
       background-color: darkslategray;
       color: white;
@@ -197,15 +197,69 @@ canvas {
         background-color: brown;
       }
 
-      &:nth-of-type(1) {
+      // &:nth-of-type(1) {
 
-        margin: 0 0 0 0;
-      }
+      //   margin: 0 0 0 0;
+      // }
+    }
+
+    // &-form_submit {
+
+    //   margin-left: 10px;
+    // }
+
+    &-input {
+
+      border: none;
+      outline: none;
+
+      // &::after {
+
+      //   content: "%";
+      //   position: absolute;
+      //   top: 0;
+      //   left: 0;
+      //   color: red;
+      //   width: 100px;
+      //   height: 100px;
+      // }
     }
   }
 
   &-materials {
 
     bottom: 0;
+  }
+
+  &-actions.-modal {
+
+    position: relative;
+    padding: 0;
+
+    z-index: inherit;
+  }
+}
+
+.modal {
+
+  display: table;
+
+  position: fixed;
+
+  width: 100%;
+  height: 100%;
+
+  left: 0;
+  top: 0;
+
+  z-index: 999999;
+  background-color: rgba(128,128,128,0.5);
+
+  &-inner {
+
+    text-align: center;
+    display: table-cell;
+    vertical-align: middle;
+
   }
 }
