--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,15 @@
 // use variables
 
+
+
+* {
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 body {
 
   margin: 0;
@@ -165,6 +175,28 @@ canvas {
 
 
 
+  &-selection {
+
+    position: absolute;
+
+    width: 100%;
+    height: 100%;
+
+    left: 0;
+    top: 0;
+
+    z-index: 10;
+
+
+
+    &.-hidden {
+
+      display: none;
+    }
+  }
+
+
+
   &-actions, &-materials {
 
     position: absolute;
@@ -261,5 +293,33 @@ canvas {
     display: table-cell;
     vertical-align: middle;
 
+  }
+}
+
+.selection_area {
+
+  position: absolute;
+
+  width: 0;
+  height: 0;
+
+  left: 0;
+  top: 0;
+
+  background-color: rgba(255, 255, 255, 0.5);
+  color: grey;
+  box-sizing: padding-box;
+  z-index: 999999;
+  overflow: hidden;
+  font-family: monospace;
+  white-space: nowrap;
+
+  &::after {
+
+    padding: 2px;
+
+    float: right;
+
+    content: attr(data-value);
   }
 }
