--- a/src/index.pug
+++ b/src/index.pug
@@ -24,7 +24,8 @@ html
 				#upload_model_button.coverings-actions-switch Upload model
 				#add_wall_mode_button.coverings-actions-switch Add wall
 				#mode_toggle_BUTTON.coverings-actions-switch Plan mode
-				#mode_selection_BUTTON.coverings-actions-switch Tile mode
+				#mode_selection_BUTTON.coverings-actions-switch(style="display: none;") Tile mode
+				#apply_segment_BUTTON.coverings-actions-switch(style="display: none;") Apply segment
 
 			.coverings-materials
 
