--- a/src/index.pug
+++ b/src/index.pug
@@ -15,7 +15,15 @@ html
 
 		.coverings
 
-			canvas
+			.coverings-canvases
+
+				canvas#canvas1
+
+				canvas#canvas2(style="background-color: rgba(255, 255, 255, 0);")
+
+			//- canvas#canvas3
+
+			//- canvas#canvas4
 
 			.coverings-plan
 
