--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,20 @@ body {
   overflow: hidden;
 }
 
+.coverings-canvases {
+
+  position: absolute;
+
+  width: 100%;
+  height: 100%;
+
+  left: 0;
+  top: 0;
+
+  background-color: white;
+  z-index: 0;
+}
+
 canvas {
 
   position: absolute;
