added texture transformation capability

--- a/src/index.pug
+++ b/src/index.pug
@@ -50,3 +50,5 @@ html
 					input.coverings-actions-input(value="4 m")
 					input.coverings-actions-input(value="2.5 m")
 					#apply_sizes_BUTTON.coverings-actions-form_submit Apply
+
+		#texture_transformation_center
