added spotlights auto location

--- a/src/index.pug
+++ b/src/index.pug
@@ -22,9 +22,10 @@ html
 
 			.coverings-actions
 
-				#load_button.coverings-actions-switch Load
-				#upload_model_button.coverings-actions-switch Upload model
-				#add_wall_mode_button.coverings-actions-switch Add wall
+				#load_BUTTON.coverings-actions-switch Load
+				#upload_model_BUTTON.coverings-actions-switch Upload model
+				#add_wall_mode_BUTTON.coverings-actions-switch Add wall
+				#locate_spotlights_BUTTON.coverings-actions-switch Locate spotlights
 				#mode_toggle_BUTTON.coverings-actions-switch Plan mode
 				#mode_selection_BUTTON.coverings-actions-switch(style="display: none;") Tile mode
 				#apply_segment_BUTTON.coverings-actions-switch(style="display: none;") Apply segment
